fix footer overflow

--- a/themes/evictionlab/assets/sass/_footer.scss
+++ b/themes/evictionlab/assets/sass/_footer.scss
@@ -174,6 +174,7 @@ footer {
 @media(min-width: $gtLaptop) {
   .footer-content {
     width: grid(137);
+    height: 368px;
   }
 }
 
